-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.7.0 FF
-
None
-
a495a5c91 (dev)
remoteobjects/qconnection_qnx_qiodevices.h:76:1: error: static assertion failed: QQnxNativeIo is neither copy- nor move-constructible, so cannot be Q_RELOCATABLE_TYPE Q_DECLARE_TYPEINFO(QQnxNativeIo, Q_RELOCATABLE_TYPE); ^~~~~~~~~~~~~~~~~~ /home/qt/work/qt/qtremoteobjects/build/target/src/remoteobjects/RemoteObjects_autogen/EWIEGA46WW/../../../../../../src/remoteobjects/qconnection_qnx_qiodevices.h:118:1: error: static assertion failed: QIOQnxSource is neither copy- nor move-constructible, so cannot be Q_RELOCATABLE_TYPE Q_DECLARE_TYPEINFO(QIOQnxSource, Q_RELOCATABLE_TYPE); ^~~~~~~~~~~~~~~~~~
Details: https://testresults.qt.io/coin/integration/qt/qtremoteobjects/tasks/1705032143
Tested changes (refs/builds/qtci/dev/1702000700):
https://codereview.qt-project.org/c/qt/qtremoteobjects/+/523758/2 Update dependencies on 'dev' in qt/qtremoteobjects
For Gerrit Dashboard: QTBUG-119870 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
523850,3 | QNX QIODevice subclasses: remove Q_DECLARE_TYPEINFOs | dev | qt/qtremoteobjects | Status: MERGED | +2 | 0 |