src/remoteobjects/qconnection_qnx_qiodevices.h
@@ -73,7 +73,6 @@ protected:
 private:
     Q_DISABLE_COPY(QQnxNativeIo)
 };
-Q_DECLARE_TYPEINFO(QQnxNativeIo, Q_RELOCATABLE_TYPE);
 
 class Q_REMOTEOBJECTS_EXPORT QIOQnxSource : public QIODevice
 {
@@ -115,7 +114,6 @@ private:
     friend class QQnxNativeServerPrivate;
     friend class QnxServerIo;
 };
-Q_DECLARE_TYPEINFO(QIOQnxSource, Q_RELOCATABLE_TYPE);
 
 QT_END_NAMESPACE
 
